Fix MediaPlaylist spacing

--- a/packages/react/src/MediaPlaylist/MediaPlaylist.module.css
+++ b/packages/react/src/MediaPlaylist/MediaPlaylist.module.css
@@ -10,6 +10,10 @@
     margin-inline: auto;
     padding: 0;
   }
+
+  .MediaPlaylist__panelContent :is(h1, h2, h3) + p {
+    margin-block-start: var(--base-size-12);
+  }
 }
 
 .MediaPlaylist__layout {
@@ -238,6 +242,12 @@
   flex-direction: column;
   align-items: flex-start;
   gap: var(--base-size-12);
+}
+
+@media screen and (max-width: 63.24rem) {
+  .MediaPlaylist__mediaPanels {
+    padding-block-end: var(--base-size-24);
+  }
 }
 
 @media screen and (min-width: 38.625rem) {
